tests/security/transformTaintChannelStorePattern/output.txt
ERROR: TaintedData - input.hack:39:12 - Data from unauthorized user data found its way to generic output using path $_POST --array-fetch--> arrayvalue-fetch (input.hack:36:36) ----> $encoded_channel_id (input.hack:36:5) ----> decode_channel#1 (input.hack:37:34) ----> call to decode_channel (input.hack:3:4) ----> $channel_id (input.hack:37:5) ----> ChannelStore::fetchById#1 (input.hack:38:50) ----> call to ChannelStore::fetchById (input.hack:24:8) ----> $channel (input.hack:38:5) ----> $this in Channel before getName (input.hack:14:21) ----> $this (input.hack:15:16) --property-fetch--> $this->channel_row (input.hack:15:23) --array-fetch--> $this->channel_row['name'] (input.hack:15:16) ----> return (input.hack:15:16) ----> call to Channel::getName (input.hack:14:32) ----> render#1 (input.hack:39:12)
